# Ghidrust

./: .gitignore  Cargo.toml  DEPENDENCIES.md  README.md
crates/ghidrust-agent/: Cargo.toml
crates/ghidrust-agent/src/: acp_client.rs  audit.rs  installer.rs  lib.rs  markdown.rs  policy.rs  system_prompt.rs  tool_bridge.rs
crates/ghidrust-cli/: Cargo.toml
crates/ghidrust-cli/src/: crypto_cmds.rs  decode_opts.rs  decode_query_cmd.rs  decode_support_cmd.rs  disasm_cmd.rs  friction.rs  main.rs  mcp_decode.rs
crates/ghidrust-cli/tests/: cli_mcp.rs  eval_analysis_decompile.rs  eval_cli_mcp_surface.rs  eval_crypto_fixtures.rs  re_bench.rs
crates/ghidrust-core/: Cargo.toml
crates/ghidrust-core/examples/: gpu_probe.rs  live_debuggee.rs
crates/ghidrust-core/src/: artifacts.rs  bounds_honesty.rs  bulk_scan.rs  callsite_hints.rs  crypto_pipeline.rs  decode_bake.rs  disasm.rs  edits.rs  elf.rs  error.rs  imports.rs  inflate.rs  inventory.rs  io_util.rs  lib.rs  machine.rs  pe.rs  pe_functions.rs  process.rs  program.rs  project.rs  resolve.rs  rtti.rs  rtti_catalog.rs  section_notes.rs  theme.rs  tree_index.rs  xrefs.rs
crates/ghidrust-core/src/analyzers/: address_tables.rs  aggressive.rs  call_convention.rs  call_fixup.rs  crypt_constants.rs  crypto_capabilities.rs  decomp_param.rs  decomp_switch.rs  demangle_ms.rs  embedded_media.rs  external_params.rs  fid.rs  function_start.rs  mod.rs  noreturn.rs  obfuscated_strings.rs  pdb.rs  resources.rs  scan_util.rs  shared_return.rs  stack.rs  strings.rs  variadic.rs
crates/ghidrust-core/src/gpu_analyzers/: engine.rs  kernels.wgsl  mod.rs  strategies.rs
crates/ghidrust-core/src/process/: ac_advisory.rs  backend.rs  discovery.rs  error.rs  mod.rs  session.rs  types.rs  win_debug.rs  win_observe.rs
crates/ghidrust-core/tests/: analyzer_content.rs  bounds_truncated_fixture.rs  crypto_discover_fixtures.rs  feature_matrix_doc.rs  process_debug_e2e.rs
crates/ghidrust-decode/: Cargo.toml
crates/ghidrust-decode/scripts/: gen_mos65xx_table.py
crates/ghidrust-decode/src/: alloc_hooks.rs  engine.rs  error.rs  group.rs  insn.rs  lib.rs  names.rs  operand.rs  option.rs  reg.rs  skipdata.rs  support.rs  x86_64.rs
crates/ghidrust-decode/src/arch/: leb128.rs  mod.rs
crates/ghidrust-decode/src/arch/aarch64/: branches.rs  data_proc.rs  dispatch.rs  fp_asimd.rs  load_store.rs  mod.rs  move_wide.rs  regs.rs  system.rs  util.rs
crates/ghidrust-decode/src/arch/alpha/: decode.rs  mod.rs
crates/ghidrust-decode/src/arch/arc/: decode.rs  mod.rs
crates/ghidrust-decode/src/arch/arm/: a32_branch.rs  a32_data.rs  a32_load_store.rs  a32_media.rs  a32_system.rs  dispatch.rs  mod.rs  regs.rs  thumb16.rs  thumb32.rs  util.rs
crates/ghidrust-decode/src/arch/bpf/: mod.rs  regs.rs
crates/ghidrust-decode/src/arch/evm/: mod.rs
crates/ghidrust-decode/src/arch/hppa/: decode.rs  mod.rs
crates/ghidrust-decode/src/arch/loongarch/: decode.rs  mod.rs
crates/ghidrust-decode/src/arch/m680x/: decode.rs  mod.rs
crates/ghidrust-decode/src/arch/m68k/: decode.rs  mod.rs
crates/ghidrust-decode/src/arch/mips/: decode.rs  mod.rs  regs.rs  util.rs
crates/ghidrust-decode/src/arch/mos65xx/: insn_id.rs  mod.rs  regs.rs  table.rs
crates/ghidrust-decode/src/arch/ppc/: decode.rs  mod.rs  regs.rs  util.rs
crates/ghidrust-decode/src/arch/riscv/: decode32.rs  decode_c.rs  mod.rs  regs.rs
crates/ghidrust-decode/src/arch/sh/: decode.rs  mod.rs
crates/ghidrust-decode/src/arch/sparc/: decode.rs  mod.rs  regs.rs
crates/ghidrust-decode/src/arch/sysz/: decode.rs  mod.rs  regs.rs
crates/ghidrust-decode/src/arch/tms320c64x/: decode.rs  mod.rs
crates/ghidrust-decode/src/arch/tricore/: decode.rs  mod.rs
crates/ghidrust-decode/src/arch/wasm/: mod.rs
crates/ghidrust-decode/src/arch/x86/: legacy.rs  mod.rs
crates/ghidrust-decode/src/arch/x86/syntax/: att.rs  mod.rs  noregname.rs
crates/ghidrust-decode/src/arch/xcore/: decode.rs  mod.rs
crates/ghidrust-decode/src/arch/xtensa/: decode.rs  mod.rs
crates/ghidrust-decomp/: Cargo.toml
crates/ghidrust-decomp/src/: bench.rs  emit_hints.rs  emit_tokens.rs  expr_fold.rs  ghidra_oracle.rs  goto_histogram.rs  gpu_decompile.rs  gpu_decompile.wgsl  ir_emit.rs  lib.rs  stage1.rs
crates/ghidrust-gui/: Cargo.toml
crates/ghidrust-gui/src/: agent_pane.rs  debugger.rs  decomp_tokens.rs  decrypt_ui.rs  dock_tabs.rs  entropy.rs  events.rs  graphs.rs  icons.rs  layouts.rs  main.rs  menu_actions.rs  nav.rs  panes.rs  register_manager.rs  scripts.rs  tool_panes.rs
crates/ghidrust-gui/src/grok_term/: ansi.rs  fonts.rs  mod.rs  pty.rs  session.rs  view.rs
crates/ghidrust-gui/src/listing/: detail_pane.rs  disasm_service.rs  mod.rs  model.rs  options.rs  persist.rs  processor.rs  search.rs  toolbar.rs
crates/ghidrust-il2cpp/: Cargo.toml
crates/ghidrust-il2cpp/src/: binary.rs  body.rs  error.rs  icall.rs  lib.rs  metadata.rs  stubs.rs  touch_map.rs
crates/ghidrust-ir/: Cargo.toml
crates/ghidrust-ir/src/: lib.rs
crates/ghidrust-lift/: Cargo.toml
crates/ghidrust-lift/src/: lib.rs
crates/ghidrust-ssa/: Cargo.toml
crates/ghidrust-ssa/src/: lib.rs  ssa.rs
crates/ghidrust-structure/: Cargo.toml
crates/ghidrust-structure/src/: lib.rs
crates/ghidrust-types/: Cargo.toml
crates/ghidrust-types/src/: lib.rs
crates/ghidrust-unity-inventory/: Cargo.toml
crates/ghidrust-unity-inventory/src/: lib.rs
docs/: GHIDRA_HEADTOHEAD.md  GPU_ANALYZER_MATRIX.md  GPU_DECOMPILER_RESEARCH.md  GPU_DECOMPILE_PROCESS.md  IL2CPP.md  PARALLEL_RE_RESEARCH.md  READABILITY_RUBRIC.md
fixtures/: analysis_lab.meta.txt  analysis_lab.pe  decode_continuity.meta.txt  tiny_x64.elf  tiny_x64.pe  tiny_x64_elf.meta.txt  tiny_x64_pe.meta.txt
fixtures/il2cpp/: README.txt  il2cpp_stub_lab.pe
scripts/: gen_analysis_lab.py  gen_fixtures.py  gen_il2cpp_fixtures.py  run_eval_analysis_decompile.ps1  verify_rtti_saved.py
skill/: README.md  SKILL.md
