[workspace]
resolver = "2"
members = [
    "crates/ghidrust-ir",
    "crates/ghidrust-decode",
    "crates/ghidrust-lift",
    "crates/ghidrust-ssa",
    "crates/ghidrust-types",
    "crates/ghidrust-structure",
    "crates/ghidrust-core",
    "crates/ghidrust-decomp",
    "crates/ghidrust-il2cpp",
    "crates/ghidrust-unity-inventory",
    "crates/ghidrust-cli",
    "crates/ghidrust-gui",
    "crates/ghidrust-agent",
]
default-members = ["crates/ghidrust-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/ghidrust"

[workspace.dependencies]
ghidrust-ir = { path = "crates/ghidrust-ir" }
ghidrust-decode = { path = "crates/ghidrust-decode" }
ghidrust-lift = { path = "crates/ghidrust-lift" }
ghidrust-ssa = { path = "crates/ghidrust-ssa" }
ghidrust-types = { path = "crates/ghidrust-types" }
ghidrust-structure = { path = "crates/ghidrust-structure" }
ghidrust-core = { path = "crates/ghidrust-core" }
ghidrust-decomp = { path = "crates/ghidrust-decomp" }
ghidrust-il2cpp = { path = "crates/ghidrust-il2cpp" }
ghidrust-unity-inventory = { path = "crates/ghidrust-unity-inventory" }
ghidrust-agent = { path = "crates/ghidrust-agent" }
