[package]
name = "ghidrust-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ghidrust Grok Build agent bridge (ACP sidecar + tool_bridge + audit + install)"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
