[package]
name = "ghidrust-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ghidrust CLI and MCP/agent tool surface"

[[bin]]
name = "ghidrust"
path = "src/main.rs"

[dependencies]
ghidrust-core = { workspace = true, features = ["gpu"] }
ghidrust-decomp = { workspace = true, features = ["gpu"] }
ghidrust-types = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
