[package]
name = "ghidrust-decode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hand-rolled multi-arch instruction decode engine"

[features]
default = []
# Diet mode: omit heavy mnemonic/name tables when building for size.
diet = []
# x86-reduce mode: compile with a reduced x86 opcode surface.
x86-reduce = []

[dependencies]
serde = { version = "1", features = ["derive"] }
