[package]
name = "ghidrust-il2cpp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hand-rolled IL2CPP global-metadata + binary correlation"

[dependencies]
ghidrust-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
