[package]
name = "ghidrust-unity-inventory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unity player install layout inventory"

[dependencies]
ghidrust-core = { workspace = true }
ghidrust-il2cpp = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
